	Simplification of the move framework application especially in the
	definition of the containers __move_traits specialization. Many 
	_AsMoveSource call replaced by explicit call to the move constructor
	when we are sure that there is one.

	* test/unit/mvctor_test.cpp: Add many tests to check move contructor
	implementations.

2005-08-19  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/gmake/gcc.mak: fix extraction of gcc version.
	Thanks Thomas Kho.

2005-08-18  Francois Dumont  <dums@stlport...>

	* stlport/stl/_deque.c: Fix _M_erase range for movable types method
	implementation, same bug as below in vector.

	* test/unit/mvctor.cpp: Improve test case on vector to reveal bug
	below and add same tests for deque which is the other container that
	use the move contructor feature.

2005-08-18  Petr Ovtchenkov  <ptr@island...>

	* INSTALL: add some words about multithread options and libraries.

	* stlport/stl/_fstream.c: some code clean to reduce bogus compiler
	warnings with -Wall.

	* stlport/config/stl_gcc.h: seems HP-UX has no llabs and lldiv.

2005-08-17  Francois Dumont  <dums@stlport...>

	* stlport/stl/_vector.h: Fix _M_erase range for movable types
	implementation thanks Sergej Zagursky.

	* build/Makefiles/nmake/vc8.mak: removed /RTC1 compiler option, the platform
	SDK compiler do not support it. STLport users will just have to activate it
	by themself if they want to.

	* stlport/stl/_complex.h: Fix some floating point literals thanks
	 Ulrich Eckhardt report.

	* stlport/stl/_time_facets.c: Complete integration of the '#' MS extension
	in the date/time format string, reported thanks to the recent locale time_get
	new test case.
	
2005-08-14  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_msvc.h: Fix platform SDK compiler config, even latest
	version that announce to be similar to .Net 2005 beta do not throw bad_alloc
	from the new operator.

	* stlport/cstdio, cstdlib: Replaced some _WIN64 checks by a