@@ -2,11 +2,18 @@
 #include <algorithm>
 #include <vector>
 #include <string>
+#include <rope>
 #include <slist>
 #include <list>
 #include <deque>
 #include <set>
+#include <map>
 #include <unordered_set>
+#include <unordered_map>
+#include <hash_set>
+#include <hash_map>
+#include <queue>
+#include <stack>
 //#include <iostream>
 
 #include "cppunit/cppunit_proxy.h"
@@ -26,6 +33,7 @@ class MoveConstructorTest : public CPPUNIT_NS::TestCase
   CPPUNIT_TEST(vector_test);
 #if defined (STLPORT)
   CPPUNIT_TEST(move_traits);
+  CPPUNIT_TEST(movable_declaration)
 #endif
   CPPUNIT_TEST_SUITE_END();
 
@@ -35,6 +43,7 @@ protected:
   void vector_test();
 #if defined (STLPORT)
   void move_traits();
+  void movable_declaration();
 #endif
 
   /*
@@ -1075,4 +1084,241 @@ void MoveConstructorTest::move_traits()
     CPPUNIT_ASSERT( CompleteMovableStruct::nb_destruct_call == 3 + 4 );
   }
 }
+
+bool type_to_bool(__true_type const&)
+{ return true; }
+bool type_to_bool(__false_type const&)
+{ return false; }
+
+template <class _Tp>
+bool is_movable(const _Tp&) {
+  typedef __move_traits<_Tp> _TpMoveTraits;
+  typedef typename _TpMoveTraits::implemented _TpMovable;
+  return type_to_bool(_TpMovable());
+}
+
+template <class _Tp>
+bool is_move_complete(const _Tp&) {
+  typedef __move_traits<_Tp> _TpMoveTraits;
+  typedef typename _TpMoveTraits::complete _TpMoveComplete;
+  return type_to_bool(_TpMoveComplete());
+}
+
+struct specially_allocated_struct {
+  bool operator < (specially_allocated_struct) const;
+};
+
+struct struct_with_specialized_less {};
+
+namespace std
+{
+  _STLP_TEMPLATE_NULL
+  class allocator<specially_allocated_struct>
+  {
+    //This allocator just represent what a STLport could do and in this
+    //case the STL containers implemented with it should still be movable
+    //but not completely as we cannot do any hypothesis on what is in this
+    //allocator.
+  public:
+    typedef specially_allocated_struct value_type;
+    typedef value_type *       pointer;
+    typedef const value_type* const_pointer;
+    typedef value_type&       reference;
+    typedef const value_type& const_reference;
+    typedef size_t     size_type;
+    typedef ptrdiff_t  difference_type;
+#if defined (_STLP_MEMBER_TEMPLATE_CLASSES)
+    template <class _Tp1> struct rebind {
+      typedef allocator<_Tp1> other;
+    };
+#endif
+    allocator() _STLP_NOTHROW {}
+#if defined (_STLP_MEMBER_TEMPLATES)
+    template <class _Tp1> allocator(const allocator<_Tp1>&) _STLP_NOTHROW;
+#endif    
+    allocator(const allocator&) _STLP_NOTHROW {}
+    ~allocator() _STLP_NOTHROW {}
+    pointer address(reference __x) const { return &__x; }
+    const_pointer address(const_reference __x) const { return &__x; }
+    pointer allocate(size_type, const void* = 0) { return 0; }
+    void deallocate(pointer, size_type) {}
+    size_type max_size() const _STLP_NOTHROW  { return 0; }
+    void construct(pointer, const_reference) {}
+    void destroy(pointer) {}
+  };
+  
+  _STLP_TEMPLATE_NULL
+  struct less<struct_with_specialized_less> {
+    bool operator() (struct_with_specialized_less const&, 
+                     struct_with_specialized_less const&) const;
+  };
+}
+
+void MoveConstructorTest::movable_declaration()
+{
+  //This test purpose is to check correct detection of the STL movable
+  //traits declaration
+  {
+    //string, wstring:
+    CPPUNIT_ASSERT( is_movable(string()) );
+    CPPUNIT_ASSERT( is_move_complete(string()) );
+#  if defined (_STLP_HAS_WCHAR_T)
+    CPPUNIT_ASSERT( is_movable(wstring()) );
+    CPPUNIT_ASSERT( is_move_complete(wstring()) );
+#  endif
+  }
+  
+  {
+    //crope, wrope:
+    CPPUNIT_ASSERT( is_movable(crope()) );
+    CPPUNIT_ASSERT( is_move_complete(crope()) );
+#  if defined (_STLP_HAS_WCHAR_T)
+    CPPUNIT_ASSERT( is_movable(wrope()) );
+    CPPUNIT_ASSERT( is_move_complete(wrope()) );
+#  endif
+  }
+  
+  {
+    //vector:
+    CPPUNIT_ASSERT( is_movable(vector<char>()) );
+    CPPUNIT_ASSERT( is_movable(vector<specially_allocated_struct>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(vector<char>()) );
+    CPPUNIT_ASSERT( !is_move_complete(vector<specially_allocated_struct>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(vector<char>()) );
+#  endif
+  }
+  
+  {
+    //deque:
+    CPPUNIT_ASSERT( is_movable(deque<char>()) );
+    CPPUNIT_ASSERT( is_movable(deque<specially_allocated_struct>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(deque<char>()) );
+    CPPUNIT_ASSERT( !is_move_complete(deque<specially_allocated_struct>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(deque<char>()) );
+#  endif
+  }
+
+  {
+    //list:
+    CPPUNIT_ASSERT( is_movable(list<char>()) );
+    CPPUNIT_ASSERT( is_movable(list<specially_allocated_struct>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(list<char>()) );
+    CPPUNIT_ASSERT( !is_move_complete(list<specially_allocated_struct>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(list<char>()) );
+#  endif
+  }
+  
+  {
+    //slist:
+    CPPUNIT_ASSERT( is_movable(slist<char>()) );
+    CPPUNIT_ASSERT( is_movable(slist<specially_allocated_struct>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(slist<char>()) );
+    CPPUNIT_ASSERT( !is_move_complete(slist<specially_allocated_struct>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(slist<char>()) );
+#  endif
+  }
+  
+  {
+    //queue:
+    CPPUNIT_ASSERT( is_movable(queue<char>()) );
+    CPPUNIT_ASSERT( is_movable(queue<specially_allocated_struct>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(queue<char>()) );
+    CPPUNIT_ASSERT( !is_move_complete(queue<specially_allocated_struct>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(queue<char>()) );
+#  endif
+  }
+  
+  {
+    //stack:
+    CPPUNIT_ASSERT( is_movable(stack<char>()) );
+    CPPUNIT_ASSERT( is_movable(stack<specially_allocated_struct>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(stack<char>()) );
+    CPPUNIT_ASSERT( !is_move_complete(stack<specially_allocated_struct>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(stack<char>()) );
+#  endif
+  }
+  
+  {
+    //associative containers, set multiset, map, multimap:
+    
+    //For associative containers it is important that less is correctly recognize as
+    //the STLport less or a user specialized less:
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(less<char>()) );
+#  endif
+    CPPUNIT_ASSERT( !is_move_complete(less<struct_with_specialized_less>()) );
+
+    //set    
+    CPPUNIT_ASSERT( is_movable(set<char>()) );
+    CPPUNIT_ASSERT( is_movable(set<specially_allocated_struct>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(set<char>()) );
+    CPPUNIT_ASSERT( !is_move_complete(set<specially_allocated_struct>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(set<char>()) );
+#  endif
+
+    //multiset
+    CPPUNIT_ASSERT( is_movable(multiset<char>()) );
+    CPPUNIT_ASSERT( is_movable(multiset<specially_allocated_struct>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(multiset<char>()) );
+    CPPUNIT_ASSERT( !is_move_complete(multiset<specially_allocated_struct>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(multiset<char>()) );
+#  endif
+  
+    //map
+    CPPUNIT_ASSERT( is_movable(map<char, char>()) );
+    CPPUNIT_ASSERT( is_movable(map<specially_allocated_struct, char>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(map<char, char>()) );
+    //Here even if allocator has been specialized for specially_allocated_struct
+    //this pecialization won't be used in default map instanciation as the default
+    //allocator is allocator<pair<specially_allocated_struct, char> >
+    CPPUNIT_ASSERT( is_move_complete(map<specially_allocated_struct, char>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(map<char, char>()) );
+#  endif
+  
+    //multimap
+    CPPUNIT_ASSERT( is_movable(multimap<char, char>()) );
+    CPPUNIT_ASSERT( is_movable(multimap<specially_allocated_struct, char>()) );
+#  if defined (_STLP_CLASS_PARTIAL_SPECIALIZATION)
+    CPPUNIT_ASSERT( is_move_complete(multimap<char, char>()) );
+    //Idem map remark
+    CPPUNIT_ASSERT( is_move_complete(multimap<specially_allocated_struct, char>()) );
+#  else
+    CPPUNIT_ASSERT( !is_move_complete(multimap<char, char>()) );
+#  endif
+  }
+
+  {
+    //hashed containers, unordered_set unordered_multiset, unordered_map, unordered_multimap,
+    //                   hash_set, hash_multiset, hash_map, hash_multimap:
+    
+    //We only check that they are movable, completness is not yet supported
+    CPPUNIT_ASSERT( is_movable(unordered_set<char>()) );
+    CPPUNIT_ASSERT( is_movable(unordered_multiset<char>()) );
+    CPPUNIT_ASSERT( is_movable(unordered_map<char, char>()) );
+    CPPUNIT_ASSERT( is_movable(unordered_multimap<char, char>()) );
+    CPPUNIT_ASSERT( is_movable(hash_set<char>()) );
+    CPPUNIT_ASSERT( is_movable(hash_multiset<char>()) );
+    CPPUNIT_ASSERT( is_movable(hash_map<char, char>()) );
+    CPPUNIT_ASSERT( is_movable(hash_multimap<char, char>()) );
+  }
+}
+
 #endif //STLPORT
